--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "qvector": "cpp",
         "new": "cpp",
         "qpixmap": "cpp",
-        "qfile": "cpp"
+        "qfile": "cpp",
+        "qpushbutton": "cpp"
     }
 }
